--- a/gb/23/9/13/n14072589.md
+++ b/gb/23/9/13/n14072589.md
@@ -14,51 +14,42 @@
 <p>责任编辑：宗敏青</p>
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072590.md#1">促进学前教育 新州家庭获500元费用减免</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072047.md#1">昆州靠PTT计划填补教师空缺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072020.md#1">南澳偏远地区爆发肺结核感染 13确诊1死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072014.md#1">南澳建房成本创新高 建筑业仍面临挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072016.md#1">南澳开展新一轮购买本地货宣传活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072027.md#1">优步推动拼车和送餐服务扩至南澳偏远地区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072031.md#1">山火警告新标牌安装严重滞后引忧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072029.md#1">上财年布市开出近17万张违泊罚单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072094.md#1">堪培拉公校手机政策 政府寻求公众反馈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105900.md#1">澳洲与欧盟贸易协议谈判破裂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105898.md#1">男子疯狂作案 悉尼富人区数十商店车辆被砸</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105799.md#1">澳风塔业忧遭政府出卖 换取中共解禁葡萄酒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105677.md#1">促澳人买医保 政府被建议加征医保附加税</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105612.md#1">挂牌房源降至年度新低 澳租房市场短缺加剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105626.md#1">移民激增 澳洲或迎来史上最高人口增幅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105607.md#1">邱泰源委员荣获世界家庭医师组织荣誉终生会员</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105606.md#1">消费支出减少 中小零售商忧圣诞销售前景</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105604.md#1">奶瓶受污染 全澳紧急召回Tempo品牌鲜奶</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105560.md#1">秦晋博士2017年致李克强书</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/27/n2977832.md#1" target="_blank">鲜为人知的马克思之七：渎神的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10920991.md#1" target="_blank">十八年宿疾消散 台湾女子感恩法轮功</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069176.md#1">【未解之谜】2025年大巨变？深度解读《黄檗禅师诗》（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066374.md#1">【未解之谜】深度解读《黄檗禅师诗》（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067434.md#1">【杨延昭传奇】乱世中的命定姻缘（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065739.md#1">做好事遭污名他却不辩解  到底是为了什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067845.md#1">【杨延昭传奇】乱世中的命定姻缘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072481.md#1">【秦鹏观察】习二大将出事？党媒泄末日心态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072045.md#1">【全球新闻】印太战略重大突破 美越关系全面升级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072334.md#1">【探索时分】俄罗斯卡52为什么被打爆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070677.md#1">岳山：预言中的兵变 习近平的“心病”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064487.md#1">组图：2023年和2024年最舒适的九款SUV</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071171.md#1">贾庆林女婿掌控的“茅台会”被曝人去楼空</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070965.md#1">周华健演唱会调侃《好声音》：唱得好我会转身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070653.md#1">梁朝伟返港时疑躲避媒体 被刘嘉玲拽回网笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14071027.md#1">爱女小名取“小茉莉” 胡歌首次透露背后深意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070922.md#1">Dior一路相挺 再与强尼戴普签香水广告大合约</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071486.md#1">妮可基嫚曾说：嫁阿汤哥除了爱还可免受性骚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061173.md#1">豆类不止逆转糖尿病 还有3个好处和1个缺点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061507.md#1">眼药水只能暂时缓解 中医教你根本上改善干眼症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071367.md#1">高龄95岁 日本前医生长寿和快乐的8个秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070781.md#1">营养师推荐你吃5种食物 可避免皱纹出现</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067515.md#1">便秘会让人失去认知、变痴呆？研究：预防很重要</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/13/n14072589.htm">悉尼华人区枪击案：一男子头部中弹</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072589.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
